tests/base/invalid/Tuple_Invalid_2.whiley
int f(int x):
    return x

public void ::main(System.Console sys):
    x,y = f(|sys.args|)